# ACP

./: ChangeLog  Compile  Doxyfile  Doxyfile.jp  Execution  Makefile  Makefile.am  Makefile.in  Makefile.inc  README  README.MultiMPI  README.Tofu  README_Tofu_jp  aclocal.m4  configure  configure.ac
acp/bl/ib/: Makefile  acpbl.c  acpbl_ib.c
acp/bl/udp/: acpbl_udp.c  acpbl_udp_gma.c  acpbl_udp_gmm.c
acp/include/: acp.h  acpbl.h  acpbl_sync.h  acpbl_udp.h  acpbl_udp_gma.h  acpch.h
acp/ml/ch/: acpch.c
config/: libtool.m4  versions
contrib/inchworm/: ACP.py  ACPinchworm.py  Fasta_entry.py  Fasta_reader.py  IRKE_COMMON.py  LICENSE  README  launch.sh  sequenceUtil.py
devel/: Makefile  config.status  libtool
devel/config/: config.h
devel/sample/: Makefile
devel/sample/bl/: Makefile
devel/sample/bl/ib/: Makefile  acpbl  acpbl_atomic  acpbl_atomic8  acpbl_ohandle  acpbl_rm  acpbl_rr  acpbl_rr2
devel/sample/bl/ib/.deps/: acpbl_test.Po  acpbl_test_atomic.Po  acpbl_test_atomic8.Po  acpbl_test_order_handle.Po  acpbl_test_rm.Po  acpbl_test_rr.Po  acpbl_test_rr2.Po
devel/sample/bl/udp/: Makefile  acpbl_udp_test  acpbl_udp_test2
devel/sample/bl/udp/.deps/: acpbl_udp_test.Po  acpbl_udp_test2.Po
devel/sample/ml/: Makefile
devel/sample/ml/cl/: Makefile
devel/sample/ml/dl/: Makefile
devel/scripts/: Makefile
devel/src/: Makefile
devel/src/bl/: Makefile
devel/src/bl/ib/: Makefile
devel/src/bl/ib/.deps/: acpbl_ib.Plo
devel/src/bl/udp/: Makefile
devel/src/bl/udp/.deps/: acpbl_udp.Plo  acpbl_udp_gma.Plo  acpbl_udp_gmm.Plo
devel/src/include/: Makefile
devel/src/ml/: Makefile
devel/src/ml/cl/: Makefile
devel/src/ml/cl/.deps/: acpcl.Plo  acpcl_progress.Plo
devel/src/ml/dl/: Makefile
devel/src/ml/dl/.deps/: acpdl.Plo  acpdl_malloc.Plo  acpdl_ws.Plo
devel/test/: Makefile
devel/test/bl/: Makefile
devel/test/ml/: Makefile
devel/test/ml/cl/: Makefile  testch01.sh  testch01_ib  testch01_udp  testch02.sh  testch02_ib  testch02_udp  testch03.sh  testch03_ib  testch03_udp  testch04.sh  testch04_ib  testch04_udp  testch05.sh  testch05_ib  testch05_udp  testch06.sh  testch06_ib  testch06_udp
devel/test/ml/cl/.deps/: testch01.Po  testch02.Po  testch03.Po  testch04.Po  testch05.Po  testch06.Po
devel/test/ml/dl/: Makefile  acpdl_ib_test  acpdl_udp_test  list_ib_test  list_udp_test
devel/test/ml/dl/.deps/: acpdl_test.Po  list_test.Po
man/man3/: GMA.3  GMM.3  HND_STR.3  XLA_STR.3  acp.h.3  acp_deque_it_t.3  acp_deque_t.3  acp_element_t.3  acp_list_it_t.3  acp_list_t.3  acp_map_ib_t.3  acp_map_it_t.3  acp_map_t.3  acp_multiset_it_t.3  acp_multiset_t.3  acp_pair_t.3  acp_set_ib_t.3  acp_set_it_t.3  acp_set_t.3  acp_vector_it_t.3  acp_vector_t.3  acp_wsditem.3  acpbl.3  acpcl.3  acpdl.3  acpml.3  body.3  deque.3  doc.h.3  hga.3  info.3  infrastructure.3  list.3  localbuf.3  lock.3  map.3  msgbuf.3  procinfo.3  set.3  vector.3  (+1 more)
sample/: Makefile.in
sample/bl/: Makefile.am  Makefile.in
sample/bl/ib/: Makefile.in
sample/bl/tofu/: Makefile.am  Makefile.in  atomic.c  inifini.c  remote2remote.c  run_127nodes.sh  run_128nodes.sh  run_2nodes.sh  run_3nodes.sh
sample/bl/tofu2/: Makefile.am  Makefile.in  atomic.c  inifini.c  remote2remote.c  run_2nodes.sh
sample/bl/udp/: Makefile.in
sample/ml/: Makefile.in
sample/ml/dl/: Makefile.in
sample/multacp/hello/: input6_ib
scripts/: Makefile.am  Makefile.in  acpcc.in  acprun  acprun-flat.rb  acprun.1in  acprun.in  generic_wrapper.1in  macprun  macprun.in
src/: Makefile.am  Makefile.in
src/bl/: Makefile.am  Makefile.in
src/bl/common/: Makefile.am  Makefile.in  acpbl_default_input.h  acpbl_input.c  acpbl_input.h
src/bl/ib/: Makefile  Makefile.am  Makefile.in  acpbl_ib.c
src/bl/tofu/: Makefile.am  Makefile.in  acpbl_tofu.c  acpbl_tofu.h  acpbl_tofu_gma.c  acpbl_tofu_gmm.c  acpbl_tofu_sys.h  acpbl_tofu_thread.c
src/bl/tofu2/: Makefile.am  Makefile.in  acpbl_tofu2.c  acpbl_tofu2.h  acpbl_tofu2_gma.c  acpbl_tofu2_gmm.c  acpbl_tofu2_sys.h  acpbl_tofu2_thread.c
src/bl/udp/: Makefile.am  Makefile.in  acpbl.h  acpbl_sync.h  acpbl_udp.c  acpbl_udp.h  acpbl_udp_gma.c  acpbl_udp_gma.h  acpbl_udp_gmm.c  acpbl_udp_gmm.h
src/include/: Makefile.am  Makefile.in  acp.h  acpbl.h  acpbl_mms.h  acpbl_sync.h  acpbl_udp_gmm.h  acpdl_malloc.h
src/ml/: Makefile.am  Makefile.in
src/ml/cl/: Makefile  Makefile.am  Makefile.in  acpcl.c  acpcl.h  acpcl_progress.c  acpcl_progress.h
src/ml/dl/: Makefile.am  Makefile.in  acpdl.c  acpdl.h  acpdl_deque.c  acpdl_list.c  acpdl_malloc.c  acpdl_malloc.h  acpdl_map.c  acpdl_multiset.c  acpdl_set.c  acpdl_vector.c  acpdl_ws.c
src_man/: acp.h
test/: Makefile.in
test/bl/: Makefile.in
test/bl/ib/: Makefile  Makefile.am  Makefile.in  acp_tp.c  acp_tp_misc.c  acp_tp_x2x.c  acpbl_test.c  acpbl_test_atomic.c  acpbl_test_atomic8.c  acpbl_test_order_handle.c  acpbl_test_rm.c  acpbl_test_rr.c  acpbl_test_rr2.c  test-acecls-ge.sh  test-acecls.sh  test01.sh
test/bl/udp/: Makefile.am  Makefile.in  acpbl_udp_test.c  acpbl_udp_test2.c
test/ml/: Makefile.am  Makefile.in
test/ml/ch/: Makefile  Makefile.am  Makefile.in  acpch_test0.c  acpch_test1.c  acpch_test2.c  acpch_test3.c  acpch_test4.c  run2-test0.sh  run2-test1.sh  run2-test2.sh  run2-test3.sh  run2-test4.sh  test-acecls-ge.sh
test/ml/cl/: Makefile.in
test/ml/dl/: Makefile.am  Makefile.in  acpdl_test.c  test_acpdl_map.c  test_acpdl_multiset.c  test_acpdl_set.c
